<resources>
    <string name="app_name">Calculator</string>
    <string name="del">Del</string>
    <string name="percent">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="fraction">1/x</string>
    <string name="square">X²</string>
    <string name="radical">²√x</string>
    <string name="div">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sum">+</string>
    <string name="sign">+/-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="cal">calculation</string>
    <string name="result">result</string>
</resources>