<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cal"
        android:text="@string/cal"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:inputType="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:hint="@string/result"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textSize="60sp"
        android:textStyle="bold"
        android:inputType="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/percent"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnCE"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/ce"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnPercent"
        app:layout_constraintTop_toTopOf="@id/btnPercent"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnC"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/c"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnCE"
        app:layout_constraintTop_toTopOf="@id/btnCE"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/delete"
        android:textSize="22sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnC"
        app:layout_constraintTop_toTopOf="@id/btnC"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnFraction"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/fraction"
        android:textSize="22sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@id/btnPercent" />
    <Button
        android:id="@+id/btnSquare"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/square"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnFraction"
        app:layout_constraintTop_toTopOf="@id/btnFraction"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnRadical"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/radical"
        android:textSize="22sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnSquare"
        app:layout_constraintTop_toTopOf="@id/btnSquare"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnDiv"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/div"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnRadical"
        app:layout_constraintTop_toTopOf="@id/btnRadical"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn7"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/seven"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btnFraction"
        app:layout_constraintTop_toBottomOf="@id/btnFraction" />
    <Button
        android:id="@+id/btn8"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/eight"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@id/btn7"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn9"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/nine"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/btn8"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnMulti"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/multi"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn9"
        app:layout_constraintTop_toTopOf="@id/btn9"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/four"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn7" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/five"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn4"
        app:layout_constraintTop_toTopOf="@id/btn4"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/six"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn5"
        app:layout_constraintTop_toTopOf="@id/btn5"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnSub"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/sub"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn6"
        app:layout_constraintTop_toTopOf="@id/btn6"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn1"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/one"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn4" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/two"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn1"
        app:layout_constraintTop_toTopOf="@id/btn1"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/three"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        app:layout_constraintTop_toTopOf="@id/btn2"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnSum"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/sum"
        android:textSize="30sp"
        android:backgroundTint="#ede8e8"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn3"
        app:layout_constraintTop_toTopOf="@id/btn3"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnSign"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/sign"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn1" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnSign"
        app:layout_constraintTop_toTopOf="@id/btnSign"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnDot"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/dot"
        android:textSize="30sp"
        android:backgroundTint="#d4d4d4"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn0"
        app:layout_constraintTop_toTopOf="@id/btn0"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:text="@string/equal"
        android:textSize="30sp"
        android:backgroundTint="#7bb4e0"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot"
        android:layout_marginStart="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
